<resources>
    <string name="app_name">FindAFriendApp</string>
    <string name="find_a_friend">Find A Friend</string>
    <string name="username">Username</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_reset_email">Send reset email</string>
    <string name="e_mail_colon">E-Mail:</string>
    <string name="sign_up">Sign up</string>
    <string name="age_colon">Age:</string>
    <string name="phone_colon">Phone:</string>
    <string name="interests">Interests</string>
    <string name="create_local_event">Create Local Event</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="description_colon">Description:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="change_your_age_colon">Change your age:</string>
    <string name="change_your_email_colon">Change your e-mail:</string>
    <string name="change_your_name_colon">Change your name:</string>
    <string name="change_you_number_colon">Change your number:</string>
    <string name="confirm_password_colon">Confirm Password:</string>
    <string name="location_colon">Location:</string>
    <string name="your_events">Your Events</string>
    <string name="followed_users">Followed users</string>
    <string name="choose_your_interests">Choose Your Interests</string>
    <string name="similarity_percentage_colon">Similarity Percentage:</string>
    <string name="click_to_check_out_common_interests_exclamation">Click to check out common interests!</string>
    <string name="chat">Chat</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="remove_from_favourites">Remove From Favourites</string>
    <string name="invitation_sent">Invitation Sent</string>
    <string name="set_date_and_time_colon">Set Date and Time:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="event_localization_colon">Event Localization:</string>
    <string name="event_description_colon">Event Description:</string>
    <string name="enter_localization_of_event">Enter localization of event</string>
    <string name="enter_event_description">Enter event description</string>
    <string name="create_event">Create Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="author_colon">Author:</string>
    <string name="participants">Participants</string>
    <string name="join_event">Join Event</string>
    <string name="leave_event">Leave Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="no_participants_yet">No Participants Yet</string>
    <string name="enter_your_email_address_colon">Enter your e-mail address:</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="resend_verification_email">Resend verification email</string>
    <string name="dont_have_an_account_question_mark_sign_up">Don\'t have an account? SIGN UP</string>
    <string name="new_invitation_exclamation">New Invitation!</string>
    <string name="register_a_new_account">Register a new account</string>
    <string name="type_your_message">Type your message</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="find_a_friend_app">Find a Friend App</string>
    <string name="you_have_no_favourite_events_or_users">You have no favourite events or users</string>
    <string name="you_have_not_set_your_interests_yet_exclamation">You have not set your interests yet!</string>
    <string name="no_users_found">No users found</string>
    <string name="no_events_found">No events found</string>
</resources>