<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_a_friend"
            android:textSize="50sp"
            android:textStyle="bold|italic"
            android:textColor="#324F5C"/>

        <TextView
            android:id="@+id/appTitleDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_a_new_account"
            android:textSize="20sp"
            android:layout_gravity="start"
            android:textColor="#4E585C"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/window_type_1"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="50dp"
        android:paddingTop="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:minWidth="260dp">

        <EditText
            android:id="@+id/etUsarname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:layout_marginTop="5dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="12sp"
            android:layout_gravity="end"
            android:background="@drawable/button_type_1"
            android:layout_marginTop="10dp"/>

        <ProgressBar
            android:id="@+id/registrationProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>