<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_a_friend"
            android:textColor="#324F5C"
            android:textSize="50sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/appTitleDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/login_to_your_account"
            android:textColor="#4E585C"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/window_type_1"
        android:gravity="center_horizontal"
        android:minWidth="260dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="50dp"
        android:paddingRight="30dp"
        android:paddingBottom="50dp">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/btnResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:text="Forgot your password?"
            android:textColor="#324F5C" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_type_1"
            android:text="@string/sign_in"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnResendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_type_1"
            android:text="@string/resend_verification_email"
            android:textSize="12sp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBarLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account_question_mark_sign_up"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>