<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_a_friend"
            android:textColor="#324F5C"
            android:textSize="50sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/appTitleDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/reset_your_password"
            android:textColor="#4E585C"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/window_type_1"
        android:gravity="center_horizontal"
        android:minWidth="260dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="50dp"
        android:paddingRight="30dp"
        android:paddingBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="10dp"
            android:text="@string/enter_your_email_address_colon"
            android:textColor="#324F5C" />

        <EditText
            android:id="@+id/etResetEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btnSendResetEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_type_1"
            android:padding="10dp"
            android:text="@string/reset_password" />

        <ProgressBar
            android:id="@+id/resetPasswordProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>