<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlChooseIcon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/background_icon_pick">

        <ImageView
            android:id="@+id/ivEvent"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/question" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/window_type_1"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/set_date_and_time_colon"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etEventDate"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/date"
                android:padding="15dp" />

            <EditText
                android:id="@+id/etEventTime"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/time"
                android:padding="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            tools:context=".CreateEventActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/window_type_1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/event_localization_colon"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etEventLocalization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_localization_of_event"
                    android:padding="15dp"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/window_type_1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/event_description_colon"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etEventDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_event_description"
                    android:padding="15dp"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:scrollbars="vertical" />

            </LinearLayout>

            <Button
                android:id="@+id/btnCreateEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_type_ok"
                android:padding="10dp"
                android:text="@string/create_event"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnEditEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_type_ok"
                android:padding="10dp"
                android:text="@string/edit_event"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

