<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivCancelEmail"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/close_icon" />

    <TextView
        android:id="@+id/tvInfoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/change_your_email_colon"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvInfoEmail"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etEmailChangeConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNewEmail"
        android:layout_marginBottom="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bCancelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmailChangeConfirmPassword"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/bOkEmail"
        android:background="@drawable/button_type_cancel"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bOkEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmailChangeConfirmPassword"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_type_ok"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/progressBarEmailChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmailChangeConfirmPassword"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/bCancelEmail"
        android:visibility="gone" />

</RelativeLayout>